@@ -1,8 +1,8 @@
 {
   "ph-scale.name": "pH Scale",
-  "basics": "Basics",
+  "macro": "Macro",
+  "micro": "Micro",
   "custom": "Custom",
-  "solutions": "Solutions",
   "choice.milk": "Milk",
   "choice.chickenSoup": "Chicken Soup",
   "choice.batteryAcid": "Battery Acid",
